1997-06-15  Thomas E. Dickey  <dickey@clark.net>

	* src/dedview.c: check return-value of setsccreg()

1997-02-11  Thomas E. Dickey  <dickey@clark.net>

	* src/version.h:
	fixes to dedscan's handling of common-prefix trimming (97/1, 97/2).
	restructured initialization of dedcolor to use ncurses 'use_default_colors()'.
	move ANSI_VARARGS tests into td_lib configure.
	make dedblip work before curses is initialized.

1997-02-02  Thomas E. Dickey  <dickey@clark.net>

	* src/dedscan.c:
	fixes a special case where common portion of path was common to all files,
	and was a relative path.  This broke an assumption in path_RESOLVE.

1997-01-18  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.h: moved dedcolor initialize to that module

	* src/ded.c: add init_dedcolor()

	* src/dedcolor.c: add init_dedcolor() to exploit 'use_default_colors()'

1997-01-12  Thomas E. Dickey  <dickey@clark.net>

	* src/dedscan.c: more mods to single-file argument list.

1997-01-08  Thomas E. Dickey  <dickey@clark.net>

	* src/dedscan.c:
	wow: long-lasting bug.  If I specified a filename as argument, I didn't
	ensure that the .flist array was allocated.

1996-12-27  Thomas E. Dickey  <dickey@clark.net>

	* src/dlog.c:
	moved condition for ANSI_VARARGS into td_lib configure-script

1996-04-10  Thomas E. Dickey  <dickey@clark.net>

	* src/dedblip.c:
	mods to make this work before curses is initialized (i.e., when piping
	to ded with "-d" option set).

1996-03-16  Thomas E. Dickey  <dickey@clark.net>

	* src/version.h: memory leaks, mod to redoVIEW interface.

	* src/dedring.c: oops: must test 'used_expr' before freeing 'scan_expr'

1996-02-26  Thomas E. Dickey  <dickey@clark.net>

	* src/dedring.c: free memory-leak for cmd_sh, scan_expr

	* src/dedmake.c: quiet gcc-warning about -TRUE

1996-02-16  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.h: add 'freed' parm to redoVIEW()

	* src/dedview.c:
	added a parm to 'redoVIEW()' so we don't try to save an obsolete RING